Added actions for user forgot and reset password.
