# app/Models/CustomerUser.php
@@ -4,15 +4,19 @@ declare(strict_types=1);
 
 namespace App\Models;
 
-// use Illuminate\Contracts\Auth\MustVerifyEmail;
 use App\Common\Domain\ValueObject\FullName;
+use App\Notifications\ForgotPasswordNotification;
+use DateTimeInterface;
+use Illuminate\Contracts\Auth\MustVerifyEmail;
 use Illuminate\Database\Eloquent\Casts\Attribute;
 use Illuminate\Database\Eloquent\Factories\HasFactory;
 use Illuminate\Foundation\Auth\User as Authenticatable;
 use Illuminate\Notifications\Notifiable;
+use Illuminate\Support\Str;
 use Laravel\Sanctum\HasApiTokens;
+use Laravel\Sanctum\NewAccessToken;
 
-class CustomerUser extends Authenticatable
+class CustomerUser extends Authenticatable implements MustVerifyEmail
 {
     public const ACCESS_TOKEN_NAME = "CUSTOMER_USER_TOKEN";
 
@@ -66,5 +70,30 @@ class CustomerUser extends Authenticatable
                 $attributes['surname'],
             )->toString(),
         )->shouldCache();
+    }
+
+//todo upravit url na FE stranku pre reset hesla
+    public function sendPasswordResetNotification($token)
+    {
+        $url = config('app.url') . '/api/auth/update-password?token='.$token.'&email='.$this->email;
+
+        $this->notify(new ForgotPasswordNotification($this, $url));
+    }
+
+    /*
+     * overwrite basic createToken because I want to delete() all tokens before generating a new one
+     */
+    public function createToken(string $name, array $abilities = ['*'], DateTimeInterface $expiresAt = null): NewAccessToken
+    {
+        $this->tokens()->delete();
+
+        $token = $this->tokens()->create([
+            'name' => $name,
+            'token' => hash('sha256', $plainTextToken = Str::random(40)),
+            'abilities' => $abilities,
+            'expires_at' => $expiresAt,
+        ]);
+
+        return new NewAccessToken($token, $token->getKey().'|'.$plainTextToken);
     }
 }
